// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders correctly 1`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": "Proxima Nova",
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#d9dbdf",
        "borderBottomWidth": 0.8,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onSelectionChange={[Function]}
      placeholder=""
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      scrollEnabled={false}
      secureTextEntry={false}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": "Proxima Nova",
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "center",
        }
      }
      testID=""
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": "Proxima Nova",
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`TextInput renders correctly 2`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": "Proxima Nova",
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#d9dbdf",
        "borderBottomWidth": 0.8,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Email"
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      scrollEnabled={false}
      secureTextEntry={false}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": "Proxima Nova",
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "center",
        }
      }
      testID=""
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": "Proxima Nova",
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`TextInput renders correctly 3`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": "Proxima Nova",
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#d9dbdf",
        "borderBottomWidth": 0.8,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Email"
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      scrollEnabled={false}
      secureTextEntry={false}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": "Proxima Nova",
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "center",
        }
      }
      testID=""
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "color": "#a3a6ac",
          "display": "flex",
          "height": 48.75,
          "justifyContent": "center",
          "marginLeft": 8.125,
          "width": 20,
        }
      }
    >
      <View
        override={
          Object {
            "fill": "#a3a6ac",
            "height": 20,
            "stroke": "#a3a6ac",
            "width": 20,
          }
        }
        xml="
<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg width=\\"1024px\\" height=\\"1024px\\" viewBox=\\"0 0 1024 1024\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
    <!-- Generator: Sketch 53.2 (72643) - https://sketchapp.com -->
    <title>email</title>
    <desc>Created with Sketch.</desc>
    <g id=\\"email\\" stroke=\\"none\\" stroke-width=\\"1\\" fill-rule=\\"evenodd\\">
        <path d=\\"M966.782173,133 L53.7771522,133 C40.5223182,133 29.7771522,143.745166 29.7771522,157 C29.7771522,164.83058 33.5972936,172.168761 40.0118515,176.660023 L500.063052,498.772726 C507.387737,504.409091 516.612263,504.409091 523.936948,498.772726 L980.616813,176.611291 C991.44783,168.97063 994.034125,153.996377 986.393464,143.16536 C981.896834,136.791163 974.582818,133 966.782173,133 Z\\" id=\\"Shape\\" fill-rule=\\"nonzero\\"></path>
        <path d=\\"M500.076089,582.7307 L37.9085973,254.077321 C27.1065102,246.395814 12.1225972,248.925545 4.44109102,259.727632 C1.55221142,263.790108 3.47039079e-12,268.651319 3.47100126e-12,273.63623 L3.41060513e-12,791 C3.47311936e-12,852.855892 50.144108,903 112,903 L912,903 C973.855892,903 1024,852.855892 1024,791 L1024,270.747716 C1024,257.492882 1013.25483,246.747716 1000,246.747716 C994.98198,246.747716 990.090174,248.320593 986.012498,251.245158 L523.889778,582.685915 C516.596622,588.582601 507.392,588.597529 500.076089,582.7307 Z\\" id=\\"Shape\\" fill-rule=\\"nonzero\\"></path>
    </g>
</svg>
"
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": "Proxima Nova",
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`TextInput renders correctly 4`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": "Proxima Nova",
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#d9dbdf",
        "borderBottomWidth": 0.8,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      editable={false}
      multiline={false}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Email"
      placeholderTextColor="#a3a6ac"
      rejectResponderTermination={true}
      scrollEnabled={false}
      secureTextEntry={false}
      style={
        Object {
          "color": "#a3a6ac",
          "flex": 1,
          "fontFamily": "Proxima Nova",
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "center",
        }
      }
      testID=""
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "color": "#a3a6ac",
          "display": "flex",
          "height": 48.75,
          "justifyContent": "center",
          "marginLeft": 8.125,
          "width": 20,
        }
      }
    >
      <View
        override={
          Object {
            "fill": "#a3a6ac",
            "height": 20,
            "stroke": "#a3a6ac",
            "width": 20,
          }
        }
        xml="
<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg width=\\"1024px\\" height=\\"1024px\\" viewBox=\\"0 0 1024 1024\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
    <!-- Generator: Sketch 53.2 (72643) - https://sketchapp.com -->
    <title>email</title>
    <desc>Created with Sketch.</desc>
    <g id=\\"email\\" stroke=\\"none\\" stroke-width=\\"1\\" fill-rule=\\"evenodd\\">
        <path d=\\"M966.782173,133 L53.7771522,133 C40.5223182,133 29.7771522,143.745166 29.7771522,157 C29.7771522,164.83058 33.5972936,172.168761 40.0118515,176.660023 L500.063052,498.772726 C507.387737,504.409091 516.612263,504.409091 523.936948,498.772726 L980.616813,176.611291 C991.44783,168.97063 994.034125,153.996377 986.393464,143.16536 C981.896834,136.791163 974.582818,133 966.782173,133 Z\\" id=\\"Shape\\" fill-rule=\\"nonzero\\"></path>
        <path d=\\"M500.076089,582.7307 L37.9085973,254.077321 C27.1065102,246.395814 12.1225972,248.925545 4.44109102,259.727632 C1.55221142,263.790108 3.47039079e-12,268.651319 3.47100126e-12,273.63623 L3.41060513e-12,791 C3.47311936e-12,852.855892 50.144108,903 112,903 L912,903 C973.855892,903 1024,852.855892 1024,791 L1024,270.747716 C1024,257.492882 1013.25483,246.747716 1000,246.747716 C994.98198,246.747716 990.090174,248.320593 986.012498,251.245158 L523.889778,582.685915 C516.596622,588.582601 507.392,588.597529 500.076089,582.7307 Z\\" id=\\"Shape\\" fill-rule=\\"nonzero\\"></path>
    </g>
</svg>
"
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": "Proxima Nova",
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`TextInput renders correctly 5`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": "Proxima Nova",
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#de350b",
        "borderBottomWidth": 0.8,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      editable={false}
      multiline={false}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Email"
      placeholderTextColor="#a3a6ac"
      rejectResponderTermination={true}
      scrollEnabled={false}
      secureTextEntry={false}
      style={
        Object {
          "color": "#a3a6ac",
          "flex": 1,
          "fontFamily": "Proxima Nova",
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "center",
        }
      }
      testID=""
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "color": "#a3a6ac",
          "display": "flex",
          "height": 48.75,
          "justifyContent": "center",
          "marginLeft": 8.125,
          "width": 20,
        }
      }
    >
      <View
        override={
          Object {
            "fill": "#de350b",
            "height": 20,
            "stroke": "#de350b",
            "width": 20,
          }
        }
        xml="
<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg width=\\"1024px\\" height=\\"1024px\\" viewBox=\\"0 0 1024 1024\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
    <!-- Generator: Sketch 53.2 (72643) - https://sketchapp.com -->
    <title>email</title>
    <desc>Created with Sketch.</desc>
    <g id=\\"email\\" stroke=\\"none\\" stroke-width=\\"1\\" fill-rule=\\"evenodd\\">
        <path d=\\"M966.782173,133 L53.7771522,133 C40.5223182,133 29.7771522,143.745166 29.7771522,157 C29.7771522,164.83058 33.5972936,172.168761 40.0118515,176.660023 L500.063052,498.772726 C507.387737,504.409091 516.612263,504.409091 523.936948,498.772726 L980.616813,176.611291 C991.44783,168.97063 994.034125,153.996377 986.393464,143.16536 C981.896834,136.791163 974.582818,133 966.782173,133 Z\\" id=\\"Shape\\" fill-rule=\\"nonzero\\"></path>
        <path d=\\"M500.076089,582.7307 L37.9085973,254.077321 C27.1065102,246.395814 12.1225972,248.925545 4.44109102,259.727632 C1.55221142,263.790108 3.47039079e-12,268.651319 3.47100126e-12,273.63623 L3.41060513e-12,791 C3.47311936e-12,852.855892 50.144108,903 112,903 L912,903 C973.855892,903 1024,852.855892 1024,791 L1024,270.747716 C1024,257.492882 1013.25483,246.747716 1000,246.747716 C994.98198,246.747716 990.090174,248.320593 986.012498,251.245158 L523.889778,582.685915 C516.596622,588.582601 507.392,588.597529 500.076089,582.7307 Z\\" id=\\"Shape\\" fill-rule=\\"nonzero\\"></path>
    </g>
</svg>
"
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": "Proxima Nova",
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  >
    error
  </Text>
</View>
`;
